[lworld] C2 compilation fails with "not drained yet" assert

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/a2dc162d-743b-4800-9e92-31f85abb45b1-S136876/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/947d413a-f0a4-4fd1-9ef2-7510eff5ae38/runs/f2277412-6e56-42a1-ba7a-c4d46341e1c9/workspace/open/src/hotspot/share/opto/compile.cpp:4776), pid=6246, tid=6282
      # assert(_late_inlines.length() == 0) failed: not drained yet
      #
      # JRE version: Java(TM) SE Runtime Environment (18.0+1) (fastdebug build 18-valhalla+1-113)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-valhalla+1-113, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xa502d4] Compile::process_print_inlining()+0x424


      Current CompileTask:
      C2: 14167 2482 b com.sun.imageio.plugins.tiff.TIFFDecompressor::decodeRaw (328 bytes)

      Stack: [0x00007fb8eccf4000,0x00007fb8ecdf5000], sp=0x00007fb8ecdeff70, free space=1007k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xa502d4] Compile::process_print_inlining()+0x424
      V [libjvm.so+0xa530ed] Compile::Optimize()+0x195d
      V [libjvm.so+0xa54866] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1656
      V [libjvm.so+0x848360] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6a0
      V [libjvm.so+0xa64a69] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc39
      V [libjvm.so+0xa656c8] CompileBroker::compiler_thread_loop()+0x518
      V [libjvm.so+0x197790c] JavaThread::thread_main_inner()+0x27c
      V [libjvm.so+0x197dec0] Thread::call_run()+0x100
      V [libjvm.so+0x162e964] thread_native_entry(Thread*)+0x104

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: