8277062: [lworld] C2 compilation fails with "not drained yet" assert